maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:5: error: ';' expected but '(' found.
    var a:random3()
                 ^